--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -131,12 +131,12 @@ footer{
     background-color: #000000;
     opacity: .5;
 }
-@media screen and (min-width:1600px){
- .footer-bgimg{
-    background-repeat:repeat-x;
+@media screen and (max-width:1024px){
+    .rescol1{
+        display: none;
+    }
 }
-  
-}
+
 
 @media screen and (min-width:776px){
     .profile-pic{
