--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -131,12 +131,12 @@ footer{
     background-color: #000000;
     opacity: .5;
 }
+
 @media screen and (max-width:1024px){
     .rescol1{
         display: none;
     }
 }
-
 
 @media screen and (min-width:776px){
     .profile-pic{
@@ -149,6 +149,7 @@ footer{
     header h1{
         margin-left:12%;
     }
+    
 }
   @media screen and (min-width:769px){
               .gif .aboutme-img{
@@ -198,6 +199,10 @@ footer{
 }
 .jumbotron{
     font-size: 1.4em;
+}
+.jumbotron img{
+    width: 80%;
+    height: auto;
 }
 .lead{
     font-size: 1.4em;
